<resources>
    <string name="app_name">Ft_hangout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_contact">Display contact</string>
    <string name="title_activity_new_contact">New contact</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone">Phone</string>
    <string name="create_contact">Create</string>
    <string name="title_alert_new_contact">Error on input</string>
    <string name="content_alert_new_contact">All input must be > to 1 character</string>
    <string name="edit">Edit</string>
    <string name="sms">sms</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="code">Code</string>
    <string name="title_activity_settings">Settings</string>
    <string name="send">Send</string>
    <string name="msg_send">Message send</string>
    <string name="type_msg">Type your message</string>




    <string-array name="colors">
        <item>Default</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Black</item>
    </string-array>
    <string name="title_activity_edit_contact">Edit contact</string>
    <string name="title_activity_display_sms">Display sms</string>

</resources>
